# QBasic

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
Test/: Test.cpp  Test.h
basicSrc/: case1  case2  case3
mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
parser/: CommandParser.cpp  CommandParser.h  Lexer.cpp  Lexer.h
statement/: Statement.cpp  Statement.h  Text.cpp  Text.h
utility/: QUtility.h
